rust/ffi/zerobus.h


typedef struct CHeader {
  char *key;
  char *value;
} CHeader;
typedef struct CHeaders {
  struct CHeader *headers;
  uintptr_t count;
  char *error_message;
} CHeaders;
typedef struct CArrowStream {
  uint8_t _private[0];
} CArrowStream;
typedef struct CZerobusSdk {
  uint8_t _private[0];
} CZerobusSdk;
typedef struct CArrowStreamConfigurationOptions {
  uintptr_t max_inflight_batches;
  bool recovery;
  uint64_t recovery_timeout_ms;
  uint64_t recovery_backoff_ms;
  uint32_t recovery_retries;
  uint64_t server_lack_of_ack_timeout_ms;
  uint64_t flush_timeout_ms;
  uint64_t connection_timeout_ms;
  int32_t ipc_compression;
  int64_t stream_paused_max_wait_time_ms;
} CArrowStreamConfigurationOptions;
typedef struct CResult {
  bool success;
  char *error_message;
  bool is_retryable;
} CResult;
typedef struct CHeaders (*HeadersProviderCallback)(void *user_data);
typedef struct CZerobusStream {
  uint8_t _private[0];
} CZerobusStream;
typedef struct CStreamConfigurationOptions {
  uintptr_t max_inflight_requests;
  bool recovery;
  uint64_t recovery_timeout_ms;
  uint64_t recovery_backoff_ms;
  uint32_t recovery_retries;
  uint64_t server_lack_of_ack_timeout_ms;
  uint64_t flush_timeout_ms;
  int32_t record_type;
  uint64_t stream_paused_max_wait_time_ms;
  bool has_stream_paused_max_wait_time_ms;
  uint64_t callback_max_wait_time_ms;
  bool has_callback_max_wait_time_ms;
  void (*ack_on_ack)(int64_t offset_id, void *user_data);
  void (*ack_on_error)(int64_t offset_id, const char *error_message, void *user_data);
  void *ack_user_data;
} CStreamConfigurationOptions;
typedef void (*CreateStreamAsyncCallback)(struct CZerobusStream *stream,
                                          const struct CResult *result,
                                          void *user_data);
typedef void (*OffsetAsyncCallback)(int64_t offset, const struct CResult *result, void *user_data);
typedef void (*BoolAsyncCallback)(bool value, const struct CResult *result, void *user_data);
typedef struct CRecord {
  bool is_json;
  uint8_t *data;
  uintptr_t data_len;
} CRecord;
typedef struct CRecordArray {
  struct CRecord *records;
  uintptr_t len;
} CRecordArray;
typedef void (*RecordArrayAsyncCallback)(struct CRecordArray records,
                                         const struct CResult *result,
                                         void *user_data);
struct CArrowStream *zerobus_sdk_create_arrow_stream_with_headers_provider(struct CZerobusSdk *sdk,
                                                                           const char *table_name,
                                                                           const uint8_t *schema_ipc_bytes,
                                                                           uintptr_t schema_ipc_len,
                                                                           HeadersProviderCallback headers_callback,
                                                                           void *user_data,
                                                                           void (*free_user_data)(void *user_data),
                                                                           const struct CArrowStreamConfigurationOptions *options,
                                                                           struct CResult *result);
void zerobus_sdk_free(struct CZerobusSdk *sdk);
struct CZerobusStream *zerobus_sdk_create_stream(struct CZerobusSdk *sdk,
                                                 const char *table_name,
                                                 const uint8_t *descriptor_proto_bytes,
                                                 uintptr_t descriptor_proto_len,
                                                 const char *client_id,
                                                 const char *client_secret,
                                                 const struct CStreamConfigurationOptions *options,
                                                 struct CResult *result);
bool zerobus_sdk_create_stream_async(struct CZerobusSdk *sdk,
                                     const char *table_name,
                                     const uint8_t *descriptor_proto_bytes,
                                     uintptr_t descriptor_proto_len,
                                     const char *client_id,
                                     const char *client_secret,
                                     const struct CStreamConfigurationOptions *options,
                                     CreateStreamAsyncCallback callback,
                                     void *user_data,
                                     struct CResult *result);
struct CZerobusStream *zerobus_sdk_create_stream_with_headers_provider(struct CZerobusSdk *sdk,
                                                                       const char *table_name,
                                                                       const uint8_t *descriptor_proto_bytes,
                                                                       uintptr_t descriptor_proto_len,
                                                                       HeadersProviderCallback headers_callback,
                                                                       void *user_data,
                                                                       void (*free_user_data)(void *user_data),
                                                                       const struct CStreamConfigurationOptions *options,
                                                                       struct CResult *result);
bool zerobus_sdk_create_stream_with_headers_provider_async(struct CZerobusSdk *sdk,
                                                           const char *table_name,
                                                           const uint8_t *descriptor_proto_bytes,
                                                           uintptr_t descriptor_proto_len,
                                                           HeadersProviderCallback headers_callback,
                                                           void *user_data,
                                                           void (*free_user_data)(void *user_data),
                                                           const struct CStreamConfigurationOptions *options,
                                                           CreateStreamAsyncCallback callback,
                                                           void *callback_user_data,
                                                           struct CResult *result);
struct CZerobusStream *zerobus_sdk_recreate_stream(struct CZerobusSdk *sdk,
                                                   struct CZerobusStream *stream,
                                                   struct CResult *result);
bool zerobus_sdk_recreate_stream_async(struct CZerobusSdk *sdk,
                                       struct CZerobusStream *stream,
                                       CreateStreamAsyncCallback callback,
                                       void *user_data,
                                       struct CResult *result);
void zerobus_stream_free(struct CZerobusStream *stream);
int64_t zerobus_stream_ingest_proto_record(struct CZerobusStream *stream,
                                           const uint8_t *data,
                                           uintptr_t data_len,
                                           struct CResult *result);
bool zerobus_stream_ingest_proto_record_async(struct CZerobusStream *stream,
                                              const uint8_t *data,
                                              uintptr_t data_len,
                                              OffsetAsyncCallback callback,
                                              void *user_data,
                                              struct CResult *result);
int64_t zerobus_stream_ingest_json_record(struct CZerobusStream *stream,
                                          const char *json_data,
                                          struct CResult *result);
bool zerobus_stream_ingest_json_record_async(struct CZerobusStream *stream,
                                             const char *json_data,
                                             OffsetAsyncCallback callback,
                                             void *user_data,
                                             struct CResult *result);
int64_t zerobus_stream_ingest_proto_records(struct CZerobusStream *stream,
                                            const uint8_t *const *records,
                                            const uintptr_t *record_lens,
                                            uintptr_t num_records,
                                            struct CResult *result);
bool zerobus_stream_ingest_proto_records_async(struct CZerobusStream *stream,
                                               const uint8_t *const *records,
                                               const uintptr_t *record_lens,
                                               uintptr_t num_records,
                                               OffsetAsyncCallback callback,
                                               void *user_data,
                                               struct CResult *result);
int64_t zerobus_stream_ingest_json_records(struct CZerobusStream *stream,
                                           const char *const *json_records,
                                           uintptr_t num_records,
                                           struct CResult *result);
bool zerobus_stream_is_closed(struct CZerobusStream *stream);
void zerobus_free_error_message(char *message);